# JForge

./: CMakeLists.txt  README.md
include/jforge/: instructions.hpp  opcode.hpp
include/jforge/access/: flags.hpp
include/jforge/attributes/: attributes.hpp  length.hpp  names.hpp  parser.hpp  printer.hpp  reader.hpp
include/jforge/attributes/stack/: frame.hpp  reader.hpp  verification_type.hpp
include/jforge/builder/: attribute_builder.hpp  class_builder.hpp  method_builder.hpp  refs.hpp
include/jforge/bytecode/: decoder.hpp  instructions.hpp  label.hpp  opcode.hpp
include/jforge/classfile/: classfile.hpp  method.hpp  parser.hpp  printer.hpp
include/jforge/constant_pool/: constant_pool.hpp  hash.hpp  infos.hpp  parser.hpp  printer.hpp  tags.hpp
include/jforge/printing/: classfile.hpp
include/jforge/util/: file.hpp  printing.hpp  span.hpp  vector.hpp
include/jforge/writer/: attribute_writer.hpp  classfile_writer.hpp  constant_pool_writer.hpp
src/: main.cpp
src/jforge/attributes/: length.cpp  parser.cpp  printer.cpp  reader.cpp
src/jforge/attributes/stack/: reader.cpp
src/jforge/builder/: attribute_builder.cpp  class_builder.cpp  method_builder.cpp
src/jforge/bytecode/: decoder.cpp  label.cpp
src/jforge/classfile/: parser.cpp  printer.cpp  reader.cpp
src/jforge/constant_pool/: constant_pool.cpp  hash.cpp  parser.cpp  printer.cpp
src/jforge/writer/: attribute_writer.cpp  classfile_writer.cpp  constant_pool_writer.cpp
tests/java/: IntTest.java  Jumps.java
